--- a/.github/workflows/first-section.yml
+++ b/.github/workflows/first-section.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print greeting
-        run: echo "Hello world!"
+        run: |
+            echo "Hello world! 1"
+            echo "Hello world! 2"
       - name: Print goodbye
         run: echo "Done - bye!"
